--- a/1 lab/styles/about.css
+++ b/1 lab/styles/about.css
@@ -40,10 +40,16 @@
 .team {
   background-size: cover;
   padding: 2px 5%;
+  background-color: rgb(43, 33, 34);
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .team-title {
   font-size: 2em;
   margin-bottom: 20px;
+  color:rgb(255, 255, 255)
 }
 
 .team-member {
@@ -107,10 +113,11 @@
 .team-member h3 {
   margin-top: 10px;
   font-size: 1.4em;
+  color: rgb(255, 255, 255);
 }
 .team-member p {
   margin-top: 5px;
-  color: #000;
+  color: rgb(255, 255, 255);
 }
 @media screen and (max-width: 769px) {
   .container {
